<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/cv_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cv_phone_number_hint"
        android:inputType="phone"
        android:lines="1" />

</android.support.design.widget.TextInputLayout>
