<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@drawable/country_item_divider"
    android:showDividers="middle"
    android:gravity="center">

    <it.ennova.phonefield.view.CountryView
        android:id="@+id/countryView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <it.ennova.phonefield.view.CountryPhoneView
        android:id="@+id/phoneView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</merge>